# xmol

./: README.md
basis/: 6-31g.0.gbs  aug-cc-pvtz.0.gbs  def2-svp.0.gbs  sto-3g.0.gbs
example/: BZ.in  H2O-2.in  H2O.in  N2.in  test1.in
pyscf-example/: BZ.py  H2O.py  N2.py
src/: CMakeLists.txt  chemutils.cpp  chemutils.h  molecule.cpp  molecule.h  scf.cpp  scf.h  utils.cpp  utils.h
src/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  xmol
